test/compile-fail/resolution/pub/in-self/top.rhdl
pub(in self::b) struct a {}
